--- a/css/oeuvre.css
+++ b/css/oeuvre.css
@@ -91,117 +91,74 @@ footer section article p{
     text-align: center;
 }
 
-/* SECTION 1 */
+/* MAIN */
 
-#section-1{
-    background-color: var(--color2);
-    padding: 85px 30px;
-    margin-bottom: 30px;
+main section{
+    max-width: 1440px;
+    margin: auto;
 }
 
-#section-1 h1{
+main section h1{
     color: #000;
-    text-align: center;
     font-family: var(--gloria);
     font-size: 45px;
     font-weight: 400;
-    line-height: 45px; 
+    line-height: 45px;
+    margin-bottom: 70px;
 }
 
-/* SECTION 2 */
-
-#section-2{
-    max-width: 1440px;
-    margin: auto;
+main section article{
     display: grid;
-}
-
-#section-2 h2{
-    color: #7A7A7A;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
     text-align: center;
-    font-family: "Noto Sans";
-    font-size: 14px;
+}
+
+main section article div img{
+    width: 300px;
+    height: 300px;
+}
+
+main section article div h2{
+    color: #000;
+    text-align: center;
+    font-family: var(--gloria);
+    font-size: 25px;
     font-weight: 400;
-    line-height: 21px;
-    margin-bottom: 25px;
+    line-height: 30px;
 }
 
-#container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-}
-
-#container h3{
-    color: #333;
+main section article div p{
+    color: #000;
+    text-align: center;
     font-family: var(--noto-sans);
     font-size: 16px;
     font-weight: 400;
-    line-height: 23px; 
+    line-height: 24px;
 }
 
-#info-container div p:nth-child(1){
-    color: #9C9C9C;
-    font-family: var(--noto-sans);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px; 
+@media screen and (max-width: 1024px) {
+    main section article{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
 }
 
-#info-container div p:nth-child(2){
-    color: #6A6A6A;
-    font-family: var(--noto-sans);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-#info-container p{
-    color: #6A6A6A;
-    font-family: var(--noto-sans);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    margin-bottom: 3px;
-}
-
-#info-container a{
-    color: #605BE5;
-    font-family: var(--noto-sans);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-#info-container div{
-    display: flex;
-    gap: 10px;
-}
-
-#section-2 > a{
-    border: 1px solid #605BE5;
-    background-color: #605BE5;
-    border-radius: 3px;
-    margin: 25px auto;
-    padding: 8px 22px;
-}
-
-
-/* RESPONSIVE */
-
-@media screen and (max-width: 1439px) {
-    #container{
+@media screen and (max-width: 768px) {
+    main section article{
         grid-template-columns: repeat(2, 1fr);
+    }
+    main section h1{
         text-align: center;
     }
-    #info-container div{
-        justify-content: center;
-    }
 }
 
-@media screen and (max-width: 939px) {
-    #container{
+@media screen and (max-width: 767px) {
+    main section article{
         grid-template-columns: 1fr;
+    }
+    main section h1{
+        text-align: center;
     }
     #burger-menu{
         display: block;
@@ -218,11 +175,6 @@ footer section article p{
     body > header > nav > ul, nav > div{
         display: none;
     }
-}
-
-@media screen and (max-width: 767px) {
-    #container img{
-        width: 315px;
-    }
     
 }
+
