--- a/css/liberation.css
+++ b/css/liberation.css
@@ -207,15 +207,27 @@ footer section article p{
         display: block;
     }
     
-    #burger-menu2{
-        display: block;
-        grid-column: 3;
+    footer ul{
+        flex-direction: column;
     }
-    #footer > section > article > ul, #footer > section > article > div{
+    #footer > section > article{
+        grid-template-columns: 1fr 1fr;
+    }
+    .reseau-footer{
+        grid-column: 2;
+    }
+    footer section article img{
+        grid-row: 1/3;
+        margin: auto;
+        width: 100%;
+    }
+    footer section article p{
+        grid-column: 1/3;
+    }
+    body > header > nav > ul{
         display: none;
     }
-
-    body > header > nav > ul, nav > div{
+    body > header > nav > div{
         display: none;
     }
 }
